# baremetal-printf

./: .gitignore  CMakeLists.txt  README.md  build.py  build.sh  build_flash.sh
app/: CMakeLists.txt  app.ld
app/include/: bsp.h
app/src/: bootloader.S  bsp.c  main.c  startup.c
bootloader/: CMakeLists.txt  bootloader.ld
bootloader/src/: bootloader.c
common/core/: system_stm32f4xx.c  uart.c
common/include/core/: uart.h
